[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "memberjojo"
authors = [{name = "Duncan Bellamy", email = "dunk@denkimushi.com"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/a16bitsysop/memberjojo"

[project.optional-dependencies]
dev = [
    "pytest",
    "setuptools-scm",
]
lint = [
    "black",
    "coverage",
    "pylint",
]
docs = [
    "furo",                       # HTML theme
    "myst-parser>=2.0",           # For Markdown support
    "sphinx>=7.0",
    "sphinx-autodoc-typehints",   # For cleaner type hints in docs
]

[tool.pytest.ini_options]
pythonpath = [ "src" ]

[tool.pylint.'MAIN']
ignore = ["docs"]

[tool.setuptools_scm]
version_file = "src/memberjojo/_version.py"
